fix header, page titles, about alignment, & small tweaks re: #3

--- a/sass/modules/_global.scss
+++ b/sass/modules/_global.scss
@@ -18,11 +18,6 @@ html {
 
 body {
     @include container(100%);
-    background-image: url("images/short_header_bkgnd@2x.jpg");
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    padding: 0 3rem;
     color:$dark-grey;
 }
 
@@ -36,6 +31,11 @@ h1 {
     margin-top: 0;
     margin-bottom: 2rem;
     font-family:$accent-font;
+    &.entry-title {
+        padding-bottom: .5rem;
+        border-bottom: 8px solid #4a4f51;
+        margin: .5rem 0 1rem 0;
+    }
 }
 
 h2 {
